--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
   "name": "alfred-bot",
   "version": "0.0.1",
-  "requires": true,
   "author": "Alexian Moins",
   "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
   "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/buenoC6/alfred-bot.git"
   },
   "license": "ISC",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/buenoC6/alfred-bot/issues"
   },
   "homepage": "https://github.com/buenoC6/alfred-bot#readme",
   "description": "",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/opus": "0.10.0",
+    "@discordjs/voice": "^0.18.0",
+    "@types/express": "^5.0.1",
     "@types/node": "^18.16.3",
     "discord.js": "^14.10.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "5.0.0",
     "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.11",
-    "socket.io": "^4.6.1",
-    "typescript": "^5.0.4"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
+    "typescript": "^5.0.4",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
