--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   "dependencies": {
     "@discordjs/opus": "0.10.0",
     "@discordjs/voice": "^0.18.0",
+    "@distube/ytdl-core": "^4.16.9",
     "@types/express": "^5.0.1",
-    "@types/node": "^18.16.3",
-    "discord.js": "^14.10.0",
+    "@types/node": "^22.15.2",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
-    "express": "5.0.0",
-    "ffmpeg-static": "^5.1.0",
-    "libsodium-wrappers": "^0.7.11",
+    "express": "5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.15",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
-    "typescript": "^5.0.4",
-    "ytdl-core": "^4.11.5"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0"
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1"
   }
 }
